neater styling and fixed lux dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -231,5 +231,9 @@ background-color: #10111256;
     color:var(--bs-list-group-color) !important;
 }
 body[theme='lux'] .table td, body[theme='lux'] .table th {
-    padding: 0.25rem !important;
+    padding: 0.75rem 0.25rem !important;
+}
+
+body[theme='lux']{
+    --bs-heading-color:43434 !important;
 }
